<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">LastQuakeChile</string>
    <string name="refresh">Recargar</string>
    <string name="contact">Contacto</string>
    <string name="search">Buscar</string>
    <string name="invite">Invitar amigos</string>
    <string name="URL_GET" translatable="false">https://lastquakechile-server.herokuapp.com/get_quakes.php</string>
    <string name="DATETIME_FORMAT" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="KEY_FECHA_UTC" translatable="false">fecha_utc</string>
    <string name="KEY_LATITUD" translatable="false">latitud</string>
    <string name="KEY_LONGITUD" translatable="false">longitud</string>
    <string name="KEY_MAGNITUD" translatable="false">magnitud</string>
    <string name="KEY_ESCALA" translatable="false">escala</string>
    <string name="KEY_PROFUNDIDAD" translatable="false">profundidad</string>
    <string name="KEY_AGENCIA" translatable="false">agencia</string>
    <string name="KEY_REFERENCIA" translatable="false">referencia</string>
    <string name="KEY_IMAGEN_URL" translatable="false">imagen_url</string>
    <string name="KEY_SENSIBLE" translatable="false">sensible</string>
    <string name="circulo_pintado">Color magnitud sismo</string>
    <string name="imagen_toolbar">Imagen toolbar</string>
    <string name="quake_time_day" translatable="false">%1$d d</string>
    <string name="quake_time_day_hour" translatable="false">%1$d d %2$d h</string>
    <string name="quake_time_hour" translatable="false">%1$d h</string>
    <string name="quake_time_minute" translatable="false">%1$d m</string>
    <string name="quake_time_second" translatable="false">%1$d s</string>
    <string name="imagen_geografica_posicion_sismo">Imagen geografica posición sismo</string>
    <string name="icono_tiempo">Icono tiempo</string>
    <string name="tiempo">Fecha/Hora</string>
    <string name="icono_distancia">Icono distancia</string>
    <string name="distancia">Distancia</string>
    <string name="icono_epicentro">Icono epicentro</string>
    <string name="icono_escala">Icono escala</string>
    <string name="profundidad">Profundidad</string>
    <string name="escala">Escala</string>
    <string name="quake_details_escala" translatable="false">%1$s</string>
    <string name="quake_details_profundidad" translatable="false">%.1f km</string>
    <string name="magnitud" translatable="false">%.1f</string>
    <string name="icono_mail">Icono email</string>
    <string name="icono_persona">Icono persona</string>
    <string name="icono_facebook">Icono facebook</string>
    <string name="icono_linkedin">Icono linkedin</string>
    <string name="contact_email" translatable="false">felipe.gonzalezalarcon94@gmail.com</string>
    <string name="contact_nombre" translatable="false">Felipe González</string>
    <string name="contact_title_email">Email</string>
    <string name="contact_title_name">Nombre</string>
    <string name="quake_details_magnitud_local">Magnitud Local (Ml)</string>
    <string name="quake_details_magnitud_momento" tools:ignore="Typos">Magnitud Momento (Mw)</string>
    <string name="icono_sensible">Icono sensible</string>
    <string name="icono_app">Icono app</string>
    <string name="invitation_welcome">¡Bienvenido!</string>
    <string name="icono_ondas">Icono ondas</string>
    <string name="TAG_FIREBASE_TOKEN" translatable="false">TOKEN_FIREBASE</string>
    <string name="TAG_FIREBASE_SUSCRIPTION" translatable="false">FIREBASE_SUSCRIPCION</string>
    <string name="TAG_FIREBASE_SUSCRIPTION_RESPONSE1" translatable="false">SUBSCRIBED</string>
    <string name="TAG_FIREBASE_SUSCRIPTION_RESPONSE2" translatable="false">YA ESTABA SUBSCRIBED</string>
    <string name="FIREBASE_CHANNEL_ID" translatable="false">1</string>
    <string name="FIREBASE_CHANNEL_NAME">Alerta sismos</string>
    <string name="FIREBASE_CHANNEL_DESCRIPTION">Recibe alertas de sismos sobre 5 grados</string>
    <string name="FIREBASE_CHANNEL_STATUS" translatable="false">CANAL_CREADO</string>
    <string name="TAG_FIREBASE_CHANNEL" translatable="false">FIREBASE_CHANNEL</string>
    <string name="TAG_FIREBASE_MESSAGE" translatable="false">FIREBASE_MESSAGE</string>
    <string name="TAG_FIREBASE_MESSAGE_DATA_INCOMING" translatable="false">NotificacionData recibida</string>
    <string name="TAG_FIREBASE_MESSAGE_INCOMING" translatable="false">Notificacion recibida</string>
    <string name="FIREBASE_MESSAGE_DATA_STATUS" translatable="false">MESSAGE_DATA_RECEIVED</string>
    <string name="FIREBASE_MESSAGE_NOTIFICATION_STATUS" translatable="false">MESSAGE_NOTIFICATION_RECEIVED</string>
    <string name="FIREBASE_CHANNEL_CREATED_MESSAGE" translatable="false">Canal de notificacion creado</string>
    <string name="FIREBASE_TOPIC_NAME" translatable="false">Quakes</string>
    <string name="FIREBASE_SUSCRITO" translatable="false">Suscrito</string>
    <string name="FLAG_RETRY" translatable="false">Recargar</string>
    <string name="TAG_PROGRESS_FROM_FRAGMENT" translatable="false">PROGRESS_FRAGMENT</string>
    <string name="TAG_PROGRESS_FROM_FRAGMENT_UPDATE_RESPONSE" translatable="false">UPDATED INFORMATION - FRAGMENT</string>
    <string name="TAG_PROGRESS_FROM_FRAGMENT_TIMEOUT_ERROR" translatable="false">TIMEOUT ERROR - FRAGMENT</string>
    <string name="TAG_PROGRESS_FROM_FRAGMENT_SERVER_ERROR" translatable="false">SERVER ERROR - FRAGMENT</string>
    <string name="TAG_PROGRESS_FROM_FRAGMENT_NOCONNECTION" translatable="false">NO CONNECTION ERROR - FRAGMENT</string>
    <string name="SNACKBAR_TIMEOUT_ERROR_PRESSED" translatable="false">SNACKBAR_TIMEOUT_ERROR</string>
    <string name="SNACKBAR_NOCONNECTION_ERROR_PRESSED" translatable="false">SNACKBAR_NOCONNECTION_ERROR</string>
    <string name="SNACKBAR_SERVER_ERROR_PRESSED" translatable="false">SNACKBAR_SERVER_ERROR</string>
    <string name="JSON_GENERAL_ERROR" translatable="false">JSON_GENERAL_ERROR</string>
    <string name="JSON_PARSE_ERROR" translatable="false">JSON_PARSE_ERROR</string>
    <string name="CONNECTION_OK" translatable="false">CONNECTION_OK</string>
    <string name="CONNECTION_OK_RESPONSE" translatable="false">Conexion correcta</string>
    <string name="CONNECTED" translatable="false">CONNECTION_STATUS</string>
    <string name="TAG_VOLLEY_ERROR" translatable="false">VOLLEY_ERROR</string>
    <string name="TAG_VOLLEY_ERROR_TIMEOUT" translatable="false">Timeout error</string>
    <string name="TAG_VOLLEY_ERROR_CONNECTION" translatable="false">NoConnection error</string>
    <string name="TAG_VOLLEY_ERROR_AUTH" translatable="false">Auth error</string>
    <string name="TAG_VOLLEY_ERROR_SERVER" translatable="false">Server error</string>
    <string name="TAG_VOLLEY_ERROR_NETWORK" translatable="false">Network error</string>
    <string name="TAG_VOLLEY_ERROR_PARSE" translatable="false">Parse error</string>
    <string name="INTENT_TITULO" translatable="false">titulo</string>
    <string name="INTENT_DESCRIPCION" translatable="false">descripcion</string>
    <string name="INTENT_CIUDAD" translatable="false">ciudad</string>
    <string name="INTENT_REFERENCIA" translatable="false">referencia</string>
    <string name="INTENT_LATITUD" translatable="false">latitud</string>
    <string name="INTENT_LONGITUD" translatable="false">longitud</string>
    <string name="INTENT_FECHA_LOCAL" translatable="false">fecha_local</string>
    <string name="INTENT_FECHA_UTC" translatable="false">fecha_utc</string>
    <string name="INTENT_MAGNITUD" translatable="false">magnitud</string>
    <string name="INTENT_PROFUNDIDAD" translatable="false">profundidad</string>
    <string name="INTENT_ESCALA" translatable="false">escala</string>
    <string name="INTENT_SENSIBLE" translatable="false">sensible</string>
    <string name="INTENT_LINK_FOTO" translatable="false">imagen_url</string>
    <string name="last_quakes_info_card_view_tittle">Últimos sismos</string>
    <string name="last_quakes_info_card_view_button">Entendido</string>
    <string name="last_quakes_info_card_view_description">En este listado se muestran los últimos sismos en Chile</string>
    <string name="shared_card_view_info" translatable="false">CARD_VIEW_INFO</string>
    <string name="shared_pref_status_card_view" translatable="false">estado_card_view_info</string>
    <string name="shared_pref_status_result_card_view" translatable="false">entendido</string>
    <string name="UTILS_TIEMPO_DIAS" translatable="false">dias</string>
    <string name="UTILS_TIEMPO_HORAS" translatable="false">horas</string>
    <string name="UTILS_TIEMPO_MINUTOS" translatable="false">minutos</string>
    <string name="UTILS_TIEMPO_SEGUNDOS" translatable="false">segundos</string>
    <string name="VIEWMODEL_TIMEOUT_ERROR">Servidor no responde, intente más tarde</string>
    <string name="VIEWMODEL_NOCONNECTION_ERROR">No tienes conexión a Internet</string>
    <string name="VIEWMODEL_SERVER_ERROR">Servidor no responde, intente más tarde</string>
    <string name="TAG_INTENT" translatable="false">INTENT</string>
    <string name="TAG_INTENT_GOOGLEPLAY_FB" translatable="false">Abriendo google play app - APP FB</string>
    <string name="TAG_INTENT_NAVEGADOR_FB" translatable="false">Abriendo navegador - APP FB</string>
    <string name="TAG_INTENT_INSTALADA_FB" translatable="false">Abriendo APP FB instalada</string>
    <string name="TAG_INTENT_GOOGLEPLAY_LK" translatable="false">Abriendo google play app - APP LK</string>
    <string name="TAG_INTENT_NAVEGADOR_LK" translatable="false">Abriendo navegador - APP LK</string>
    <string name="TAG_INTENT_INSTALADA_LK" translatable="false">Abriendo APP LK instalada</string>
    <string name="TRY_INTENT_NOTIFICATION_1" translatable="false">Realizando intent de notificacion</string>
    <string name="TRY_INTENT_NOTIFICATION" translatable="false">TRY_INTENT_NOTIFICATION</string>
    <string name="TRY_INTENT_DETALLE" translatable="false">Intent de detalle de sismo</string>
    <string name="TAG_GOOGLE_PLAY" translatable="false">GOOGLE_PLAY</string>
    <string name="TAG_GOOGLE_PLAY_NOSOPORTADO" translatable="false">Dispositivo no soportado</string>
    <string name="TAG_GOOGLE_PLAY_ACTUALIZADO" translatable="false">Google Play actualizado</string>
    <string name="INVITATION_TITLE">¡Invita a tus amigos a usar la App!</string>
    <string name="INVITATION_DEEP_LINK" translatable="false">https://lastquakechile.page.link/hJJ9</string>
    <string name="INVITATION_SUBJECT">Descarga LastQuakeChile App</string>
</resources>