<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="2"
        android:title="@string/refresh"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <group android:id="@+id/dot">

        <item
            android:id="@+id/invite"
            android:orderInCategory="3"
            android:title="@string/invite"
            app:showAsAction="never" />
        <item
            android:id="@+id/contact"
            android:orderInCategory="5"
            android:title="@string/contact"
            android:visible="false"
            app:showAsAction="never" />
        <item
            android:id="@+id/settings"
            android:orderInCategory="4"
            android:title="@string/settings"
            app:showAsAction="never" />


    </group>


</menu>