<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- AppBar -->
    <android.support.constraint.Guideline
        android:id="@+id/derecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <android.support.constraint.Guideline
        android:id="@+id/izquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintBottom_toTopOf="@+id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Permite el colapso del toolbar de la activity -->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_contact"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/toolbar_image_contact"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:background="@drawable/foto"
                android:contentDescription="@string/imagen_toolbar"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5" />

            <android.support.v7.widget.Toolbar

                android:id="@+id/tool_bar_contact"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="app_bar_contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_email_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/contact_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_email_contact"
        app:layout_constraintTop_toTopOf="@+id/iv_email_contact" />

    <ImageView
        android:id="@+id/iv_email_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/izquierda"
        app:layout_constraintTop_toBottomOf="@+id/separador1"
        app:srcCompat="@drawable/ic_email_black_24dp"
        android:contentDescription="@string/icono_mail" />

    <TextView
        android:id="@+id/tv_title_email_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_title_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_email_contact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_email_contact"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_contact" />

    <View
        android:id="@+id/separador1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/dividerHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/derecha"
        app:layout_constraintStart_toStartOf="@+id/tv_title_email_contact"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_nombre_contact" />

    <View
        android:id="@+id/separador2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/dividerHorizontal"
        app:layout_constraintEnd_toStartOf="@+id/derecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_title_email_contact"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_email_contact" />

    <ImageView
        android:id="@+id/iv_user_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/izquierda"
        app:layout_constraintTop_toTopOf="@+id/barrier2"
        app:srcCompat="@drawable/ic_account_box_black_24dp"
        android:contentDescription="@string/icono_persona" />

    <TextView
        android:id="@+id/tv_name_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/contact_nombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/iv_user_contact"
        app:layout_constraintTop_toTopOf="@+id/iv_user_contact" />

    <TextView
        android:id="@+id/tv_title_nombre_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_title_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toEndOf="@+id/tv_name_contact"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_name_contact"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_contact" />

    <ImageButton
        android:id="@+id/ib_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/ib_linkedin"
        app:layout_constraintStart_toEndOf="@+id/izquierda"
        app:layout_constraintTop_toBottomOf="@+id/separador2"
        app:srcCompat="@drawable/ic_facebook"
        android:contentDescription="@string/icono_facebook" />

    <ImageButton
        android:id="@+id/ib_linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toStartOf="@+id/derecha"
        app:layout_constraintStart_toEndOf="@+id/ib_facebook"
        app:layout_constraintTop_toBottomOf="@+id/separador2"
        app:srcCompat="@drawable/ic_linkedin"
        android:contentDescription="@string/icono_linkedin" />

</android.support.constraint.ConstraintLayout>